# unbiased_cnf

./: README.md  pyproject.toml
main/: eval_phi_array.sh  job_gmm.sh  job_phi.sh  job_phi_array.sh  main phi.py  main_gmm.py  main_phi.py
notebooks/: analysis.ipynb
results/: cnf_result_phi.csv  cnf_result_phi_old.csv  cnf_result_phi_oldv2.csv  cnf_result_phi_oldv4.csv
src/: eval.py  integrator.py  nn.py  theory.py  train.py  utils.py
